# codylay

./: CLAUDE.md  README.md  codedoc.config.json  codedoc.py  codilay.config.json  codilay_legacy.py  pyproject.toml
codilay/: .codilay_state.json  CODEBASE.md  links.json
codilay/chat/conversations/: 8ffa015bb1a5.json  f78c75710937.json
codilay/history/: snapshot_20260316_194726_739050.json  snapshot_20260316_200033_597851.json
src/codedoc/: __init__.py  __main__.py  chunker.py  cli.py  config.py  docstore.py  git_tracker.py  llm_client.py  planner.py  processor.py  prompts.py  scanner.py  state.py  triage.py  ui.py  wire_manager.py
src/codedoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/codilay/: annotator.py  chatstore.py  cli.py  commit_doc.py  config.py  dependency_graph.py  docstore.py  git_tracker.py  llm_client.py  menu.py  parallel_orchestrator.py  processor.py  prompts.py  scanner.py  server.py  settings.py  triage.py  ui.py  watcher.py  wire_bus.py
src/codilay/web/: index.html  script.js  style.css
src/codylay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_annotator.py  test_change_report.py  test_chatstore.py  test_commit_doc.py  test_config_state.py  test_dependency_graph.py  test_diff_analyzer.py  test_diff_run_cli.py  test_llm_client.py  test_parallel_orchestrator.py  test_server_endpoints.py  test_settings.py  test_wire_bus.py
