[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codilay"
version = "0.1.1"
description = "AI Agent for Codebase Documentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CodiLay"},
]
keywords = ["documentation", "ai", "llm", "codebase", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.12.1",
    "click>=8.1.7",
    "rich>=13.9.0",
]
[project.optional-dependencies]
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
watch = [
    "watchdog>=3.0.0",
]
all = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "watchdog>=3.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/HarmanPreet-Singh-XYT/codilay"
Repository = "https://github.com/HarmanPreet-Singh-XYT/codilay"
Issues = "https://github.com/HarmanPreet-Singh-XYT/codilay/issues"
Documentation = "https://github.com/HarmanPreet-Singh-XYT/codilay#readme"

# THIS IS THE KEY PART — registers the `codilay` command
[project.scripts]
codilay = "codilay.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codilay = ["web/*.html"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["F401", "F841", "F541"]
per-file-ignores = { "__init__.py" = ["F401"], "src/codilay/prompts.py" = ["E501"], "src/codilay/server.py" = ["E501"], "src/codilay/menu.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"